--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 SQLAlchemy~=2.0.25
 flask~=3.0.0
 Flask-SQLAlchemy~=3.1.1
-psycopg[binary,pool]~=3.1.17
 psycopg2_binary~=2.9.9
+Flask_Migrate~=4.0.5
